--- a/Home.html
+++ b/Home.html
@@ -24,11 +24,11 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item inactive">
+                    <a class="nav-link" href="/Kelvinator-by-bootstrap/home.html">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/about.html">About</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="/Kelvinator-by-bootstrap/about.html">About</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -36,7 +36,7 @@
                         More
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/gallery.html">Gallery</a>
+                        <a class="dropdown-item" href="//Kelvinator-by-bootstrap/gallery.html">Gallery</a>
                         <a class="dropdown-item" href="#">Support</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Write for us</a>
@@ -45,7 +45,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/contact.html" tabindex="-1" aria-disabled="true">Contact Us</a>
+                    <a class="nav-link" href="/Kelvinator-by-bootstrap/contact.html" tabindex="-1" aria-disabled="true">Contact Us</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
