--- a/index.html
+++ b/index.html
@@ -282,7 +282,11 @@
                 </div>
             </div>
         </div>
-    </div>'
+    </div>
+         <footer class="container">
+        <p class="float-right"><a href="#">Back to top</a></p>
+        <p>© 2020-2021 Kelvinator, Inc. · <a href="/privacy.html">Privacy</a> · <a href="#">Terms</a></p>
+      </footer>
 
 
 
