--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                 <li class="nav-item inactive">
                     <a class="nav-link" href="/Kelvinator-by-bootstrap/index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item inactiveactive">
                     <a class="nav-link" href="/Kelvinator-by-bootstrap/about.html">About</a>
                 </li>
                 <li class="nav-item dropdown">
@@ -44,7 +44,7 @@
                         <a class="dropdown-item" href="#">Home</a>
                     </div>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="/Kelvinator-by-bootstrap/contact.html" tabindex="-1" aria-disabled="true">Contact Us</a>
                 </li>
             </ul>
@@ -103,7 +103,7 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
-    <div class="container my-4">]
+    <div class="container my-4">
         <h2> Contact Us</h2>
         <form>
             <div class="form-group">
