--- a/Home.html
+++ b/Home.html
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item inactive">
-                    <a class="nav-link" href="/Kelvinator-by-bootstrap/index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/Kelvinator-by-bootstrap/index.html">Home<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/Kelvinator-by-bootstrap/about.html">About</a>
@@ -36,12 +36,12 @@
                         More
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="//Kelvinator-by-bootstrap/gallery.html">Gallery</a>
-                        <a class="dropdown-item" href="#">Support</a>
+                        <a class="dropdown-item" href="/Kelvinator-by-bootstrap/gallery.html">Gallery</a>
+                        <a class="dropdown-item" href="/Kelvinator-by-bootstrap/support.html">Support</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Write for us</a>
+                        <a class="dropdown-item" href="/Kelvinator-by-bootstrap/write.html">Write for us</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Home</a>
+                        <a class="dropdown-item" href="/Kelvinator-by-bootstrap/index.html">Home</a>
                     </div>
                 </li>
                 <li class="nav-item">
