--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,9 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
              <ul class="navbar-nav mr-auto">
                 <li class="nav-item inactive">
-                    <a class="nav-link" href="/Kelvinator-by-bootstrap/index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/Kelvinator-by-bootstrap/index.html">Home<span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item inactiveactive">
+                <li class="nav-item active">
                     <a class="nav-link" href="/Kelvinator-by-bootstrap/about.html">About</a>
                 </li>
                 <li class="nav-item dropdown">
@@ -36,15 +36,15 @@
                         More
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="//Kelvinator-by-bootstrap/gallery.html">Gallery</a>
-                        <a class="dropdown-item" href="#">Support</a>
+                        <a class="dropdown-item" href="/Kelvinator-by-bootstrap/gallery.html">Gallery</a>
+                        <a class="dropdown-item" href="/Kelvinator-by-bootstrap/support.html">Support</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Write for us</a>
+                        <a class="dropdown-item" href="/Kelvinator-by-bootstrap/write.html">Write for us</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Home</a>
+                        <a class="dropdown-item" href="/Kelvinator-by-bootstrap/index.html">Home</a>
                     </div>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="/Kelvinator-by-bootstrap/contact.html" tabindex="-1" aria-disabled="true">Contact Us</a>
                 </li>
             </ul>
